Change text color in play-button to black

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         }
 
         #playButton {
+            color: #000;
             position: absolute;
             bottom: 0.3cm; left: 0; right: 0; margin: auto;
             background-color: #eeff00;
