Update title and text to '蓋先生おみくじ2026'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>キャッパーおみくじ2026</title>
+    <title>蓋先生おみくじ2026</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=M+PLUS+Rounded+1c:wght@700&family=Zen+Kurenaido&display=swap");
     </style>
@@ -222,7 +222,7 @@
             <div id="frame-input" class="frame-border"></div>
 
             <div class="HNYbox">
-                <div class="text">キャッパー<br>おみくじ</div>
+                <div class="text">蓋先生おみくじ<br>2026</div>
             </div>
 
             <div class="rotate_kuji">
